<resources>
    <string name="app_name">Ecologie</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="connection">Connection</string>
    <string name="page">page</string>
    <string name="course">Course</string>
    <string name="waste">Waste</string>
    <string name="search">search</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Recycle</string>
    <string name="nav_header_subtitle">ecologie.user@recycle.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_test">Test</string>
    <string name="profile">Profile</string>
    <string name="detail">Detail</string>
    <string name="login">login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="validate">Validate</string>
    <string name="name">name</string>
    <string name="lastname">Lastname</string>
    <string name="birthdate">birthdate</string>
    <string name="dateHint">DD/MM/AAAA</string>
    <string name="adress">Adress</string>
    <string name="adressHint">XX ...</string>
    <string name="phone">phone</string>
    <string name="hintPhone">06...</string>
    <string name="email">Email</string>
    <string name="registerQuestion">register ?</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="emptyMailSC">Please enter your email</string>
    <string name="invalidMailSC">The email address is not valid</string>
    <string name="PasswordSC">Please enter your password</string>
    <string name="missingInformation">Missing information</string>
    <string name="invalid_Information">invalid information</string>
    <string name="emailIsEmptySC">Please enter your email</string>
    <string name="invalidEmail">The Email aderess entered is invalid</string>
    <string name="firstnameIsEmpty">Please enter your Firstnome</string>
    <string name="lastnameIsEmpty">Please enter your Lastname</string>
    <string name="birthdateIsEmpty">Please enter your birthdate</string>
    <string name="adressIsempty">Please enter your Adress</string>
    <string name="phoneIsEmpty">Please enter your phone</string>
    <string name="invalidPhone">The phone entered is invalid</string>
    <string name="congratulation">Congratulations</string>
    <string name="adressIsEmptySC">Please Enter your adress</string>
    <string name="ConfirmCreateUser">Your account has been created, A password has been sent to you .   Please, check your email</string>
    <string name="error422putUser">input error, please check your information</string>
    <string name="serverError">Server error, We apologize for the inconvenience</string>
    <string name="sendAutherMail">another email has just sent !</string>
    <string name="TextReSendMail">We apologize for the inconvenience. Please check your mail again !</string>
    <string name="enableGPSandConxMSG">Please activate the location, otherwise check your internet connection</string>
    <string name="noGpsAndCoTitle">Internet connection required</string>
    <string name="SuccefulLogin">Happy to see you again !</string>
    <string name="noGps">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="no">No</string>
    <string name="currentLocation">Current Position</string>
    <string name="notLogin">Access denied</string>
    <string name="notLoginMsg">You must be login to acess to your profile</string>
    <string name="deconnect">Disconnected</string>
    <string name="apiPlaceKey">AIzaSyD40rsxQ8VNTfkw0NOv5TXKMELK2mBTa6k</string>
</resources>
