<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_parcours"
            android:icon="@drawable/ic_planet"
            android:title="@string/course" />

        <item
            android:id="@+id/nav_waste"
            android:icon="@drawable/ic_menu_waste"
            android:title="@string/waste" />


    </group>

    <item android:title="Plus" >
        <menu>
            <item
                android:id="@+id/nav_profil"
                android:icon="@drawable/ic_menu_person"
                android:title="@string/profile" />
        </menu>
    </item>

</menu>
